fixed contact page image covering footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ main {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 40%;
     margin-bottom: 16px;
     padding: 0 8px;
   }
